created function to hide opening animation and show showcase div

--- a/index.html
+++ b/index.html
@@ -45,13 +45,19 @@
           <div class="col s12 l12 endless4" id="fade4">Welcome to my site. I'm Tom</div>
           <div class="col s12 l12 endless5" id="fade5">Take a look at some of my work.</div>
           <div class="col s12 l12 endless6" id="fade6">Let's create something awesome together.</div>
-          <button class=" endless7 " id="fade7"><i class=" material-icons white-text">keyboard_arrow_down</i></button>
+          <button class=" clickable waves-effect waves-light endless7 black" id=""><i class=" material-icons white-text">keyboard_arrow_down</i></button>
      
     </div>
    </div>
   
+     <div class="container align-center" id="fade8">
+        <div class="row showcase">
+           <div class="col s12 l12 showme">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis laborum, sequi porro qui quam, ex voluptatum aliquam ipsam quod commodi necessitatibus eum est! Voluptate saepe architecto eaque odio animi expedita.
+           </div>
+         </div>
+      </div>
      
-      </footer>
    </body>
    <!--JavaScript at end of body for optimized loading-->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
