--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                <div class="align-center">
                   <h3 class="col m12 black-text aboutme">About Me</h3>
                  
-                  <img src="/assets/images/tom3.JPG" alt="" class="col m3 l3 push-l3 img1">
+                  <img src="assets/images/tom3.JPG" alt="" class="col m3 l3 push-l3 img1">
                 
                   <p class="col  l3 push-l3 black-text aboutmetext ">A up-and-coming Full Stack Web 
                      <span class="spangold">Develop</span>er with a passion for 
