added about me fixed div issue

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
       <link  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"  rel="stylesheet"  type='text/css'>
       <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="assets/style.css">
       <link rel='shortcut icon' type='image/x-icon' href='assets/images/favicon.ico'/>
@@ -16,10 +17,10 @@
    </head>
    <body class="backgroundimg">
       <div class="header" id="myHeader">
-         <a href="#" class="namelogo black-text">Tom</a>
-         <a href="#" class="trigger float right lang lang1"><i class="material-icons">dehaze</i></a>
-         <a href="#" class="float right lang2 lang  langright black-text">ES</a>
-         <a href="#" class="float right lang2 lang  black-text">EN</a>
+         <a href="#" class="namelogo ">Tom</a>
+         <a href="#" class="trigger float right  lang1 lang"><i class="material-icons dehaze">dehaze</i></a>
+         <a href="#" class="float right lang2 lang  langright ">ES</a>
+         <a href="#" class="float right lang2 lang  langright2 ">EN</a>
          <a href="https://www.instagram.com/tomtom6288/" class="iconfloat"><i class=" iconfloat fa fa-instagram "></i></a>
          <a href="https://github.com/Tmaxey201" class="iconfloat1"> <i class=" iconfloat1 fa fa-github" ></i></a>
          <a href="#" class="iconfloat2 ">  <i class="iconfloat2 fa fa-linkedin" ></i></a>
@@ -41,11 +42,11 @@
          <div class="container center" id="">
             <div class="row showcase">
                <div class="align-center">
-                  <h3 class="col m12 black-text aboutme">About Me</h3>
+                  <h3 class="col m12 white-text aboutme">About Me</h3>
                  
-                  <img src="assets/images/tom3.jpg" alt="" class="col m3 l3 push-l3 img1">
+                  <img src="assets/images/tom3.jpg" alt="" class="col m3 l5 img-responsive">
                 
-                  <p class="col  l3 push-l3 black-text aboutmetext ">A up-and-coming Full Stack Web 
+                  <p class="col  l5 white-text aboutmetext ">A up-and-coming Full Stack Web 
                      <span class="spangold">Develop</span>er with a passion for 
                      <span class="spangold"> design</span>ing and <span class="spangold">creating</span>
                      web pages. Born and raised in rural North Carolina but always on the move to the next 
