testing javascript refactor

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
          <a href="#" class="trigger clickable float right  lang1 lang"><i class="material-icons dehaze">dehaze</i></a>
          <a href="#" class="float right lang2 lang  langright ">ES</a>
          <a href="#" class="float right lang2 lang  langright2 ">EN</a>
-         <a href="https://www.instagram.com/tomtom6288/" class="iconfloat"><i class=" iconfloat fa fa-instagram "></i></a>
+         <a href="https://www.instagram.com/tomtom6288/" class="iconfloat"><i class=" iconfloat fa fa-instagram fa-sm"></i></a>
          <a href="https://github.com/Tmaxey201" class="iconfloat1"> <i class=" iconfloat1 fa fa-github"></i></a>
          <a href="#" class="iconfloat2 "> <i class="iconfloat2 fa fa-linkedin"></i></a>
       </div>
-      <h1 class="col  endless" id="fade">Develop</h1>
+      <h1 class="col  endless" id="fade0">Develop</h1>
       <h1 class="col  endless1" id="fade1">Design</h1>
       <h1 class="col  endless2" id="fade2">Create</h1>
       <h1 class="col  endless3" id="fade3">Inspire</h1>
