attempt to fix icon issue by adding local fontawesom file

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
       <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-      <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
-         type='text/css'>
+      <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" type='text/css'>
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="assets/css/fontawesome.min.css">
       <link rel="stylesheet" href="assets/style.css">
       <link rel='shortcut icon' type='image/x-icon' href='assets/images/favicon.ico' />
    </head>
@@ -82,7 +82,7 @@
                         <span class="spangold">Develop</span>er with a passion for
                         <span class="spangold"> design</span>ing and <span class="spangold">creating</span>
                         web pages. Specializing in Front End UX/UI development and interpersonal communication skills. With
-                        a combination of your <span class="spangold">ideas</span> and my expertise, I can bring your
+                        a combination of your <span class="spangold">ideas</span> and my expertise, we can bring your
                         project to life.
                   </div>
                </div>
@@ -233,8 +233,8 @@
                   <footer class="page-footer white">
                      <div class="container">
                         <div class="row center">
-                           <div class="col s3 offset-s3"><img src="assets/images/tombrand.png" alt="" class="img5"></div>
-                           <div class="col s3  contactme">
+                           <div class="col s3 "><img src="assets/images/tombrand.png" alt="" class="img5"></div>
+                           <div class="col s6  contactme">
                               <a href="https://www.instagram.com/tomtom6288/" ><i class=" fa fa-instagram fa-2x  linkicon"></i></a>
                               <a href="https://www.linkedin.com/in/thomas-maxey-776598207/"> <i class="fa fa-linkedin fa-2x  linkicon"></i></a> 
                               <a href="https://github.com/Tmaxey201"> <i class="fa fa-github-square fa-2x  linkicon"></i></a> 
