--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div class="header" id="myHeader">
          <a href="#" class="namelogo ">Tom</a>
          <a href="#modal1" class="modal-trigger  float right  lang1 lang"><i class="material-icons dehaze">dehaze</i></a>
-         <a href="https://www.instagram.com/tomtom6288/" class="iconfloat"><i class=" iconfloat fa fa-instagram fa-sm"></i></a>
-         <a href="https://github.com/Tmaxey201" class="iconfloat1"> <i class=" iconfloat1 fa fa-github"></i></a>
-         <a href="#" class="iconfloat2 "> <i class="iconfloat2 fa fa-linkedin"></i></a>
+         <a href="https://www.instagram.com/tomtom6288/" class="iconfloat"><i class=" iconfloat fab fa-instagram fa-sm"></i></a>
+         <a href="https://github.com/Tmaxey201" class="iconfloat1"> <i class=" iconfloat1 fab fa-github"></i></a>
+         <a href="#" class="iconfloat2 "> <i class="iconfloat2 fab fa-linkedin"></i></a>
       </div>
       <h1 class="col  endless" id="fade0">Develop</h1>
       <h1 class="col  endless1" id="fade1">Design</h1>
@@ -48,13 +48,13 @@
                   <h2 class="white-text aboutme">Let's Keep in Touch</h2>
                   <div class="col s4 "><img src="assets/images/tombrand.png" alt="" class="img5"></div>
                   <div class="col s8 contactme">
-                     <a href="facebook.com" ><i class=" fa fa-facebook-square fa-3x  linkicon"></i></a>
-                     <a href="https://www.instagram.com/tomtom6288/" ><i class=" fa fa-instagram fa-3x  linkicon"></i></a>
-                     <a href="https://twitter.com/home" ><i class=" fa fa-twitter-square fa-3x  linkicon"></i></a>
-                     <a href="https://open.spotify.com/user/axwellington" ><i class=" fa fa-spotify fa-3x linkicon"></i></a>
-                     <a href="https://www.linkedin.com/in/thomas-maxey-776598207/"> <i class="fa fa-linkedin fa-3x  linkicon"></i></a> 
-                     <a href="https://github.com/Tmaxey201"> <i class="fa fa-github-square fa-3x  linkicon"></i></a> 
-                     <a href="mailto:tmaxey201@gmail.com"><i class="fa fa-envelope fa-3x  linkicon"></i></a> 
+                     <a href="facebook.com" ><i class=" fab fa-facebook-square fa-3x  linkicon"></i></a>
+                     <a href="https://www.instagram.com/tomtom6288/" ><i class=" fab fa-instagram fa-3x  linkicon"></i></a>
+                     <a href="https://twitter.com/home" ><i class=" fab fa-twitter-square fa-3x  linkicon"></i></a>
+                     <a href="https://open.spotify.com/user/axwellington" ><i class=" fab fa-spotify fa-3x linkicon"></i></a>
+                     <a href="https://www.linkedin.com/in/thomas-maxey-776598207/"> <i class="fab fa-linkedin fa-3x  linkicon"></i></a> 
+                     <a href="https://github.com/Tmaxey201"> <i class="fab fa-github-square fa-3x  linkicon"></i></a> 
+                     <a href="mailto:tmaxey201@gmail.com"><i class="fab fa-envelope fa-3x  linkicon"></i></a> 
                      <a href="tel:252-670-0908">
                         <h3 class="linkicon">  1-252-670-0908</h3>
                      </a>
@@ -235,10 +235,10 @@
                         <div class="row center">
                            <div class="col s3 "><img src="assets/images/tombrand.png" alt="" class="img5"></div>
                            <div class="col s6  contactme">
-                              <a href="https://www.instagram.com/tomtom6288/" ><i class=" fa fa-instagram fa-2x  linkicon"></i></a>
-                              <a href="https://www.linkedin.com/in/thomas-maxey-776598207/"> <i class="fa fa-linkedin fa-2x  linkicon"></i></a> 
-                              <a href="https://github.com/Tmaxey201"> <i class="fa fa-github-square fa-2x  linkicon"></i></a> 
-                              <a href="mailto:tmaxey201@gmail.com"><i class="fa fa-envelope fa-2x  linkicon"></i></a> 
+                              <a href="https://www.instagram.com/tomtom6288/" ><i class=" fab fa-instagram fa-2x  linkicon"></i></a>
+                              <a href="https://www.linkedin.com/in/thomas-maxey-776598207/"> <i class="fab fa-linkedin fa-2x  linkicon"></i></a> 
+                              <a href="https://github.com/Tmaxey201"> <i class="fab fa-github-square fa-2x  linkicon"></i></a> 
+                              <a href="mailto:tmaxey201@gmail.com"><i class="fab fa-envelope fa-2x  linkicon"></i></a> 
                               <a href="mailto:tmaxey201@gmail.com" class="linkicon">Tmaxey201@gmail.com</a>
                               <div class="linkicon">1-252-670-0908</div>
                               <div class="linkicon"><a href="assets/files/Thomas Maxey Resume.pdf" class="white-text linkicon" download><span class="linkicon">My Resume</span></a></div>
