--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="header" id="myHeader">
          <a href="#" class="namelogo ">Tom</a>
          <a href="#modal1" class="modal-trigger  float right  lang1 lang"><i class="material-icons dehaze iconcolor ">dehaze</i></a>
-         <a href="https://www.instagram.com/tomtom6288/" class="iconfloat"><i class=" iconfloat fab fa-instagram fa-sm iconcolor "></i></a>
+         <a href="https://www.instagram.com/tomtom6288/" class="iconfloat"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="1em" height="1em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3z" fill="#626262"/></svg></a>
          <a href="https://github.com/Tmaxey201" class="iconfloat1"> <i class=" iconfloat1 fab fa-github iconcolor  "></i></a>
          <a href="#" class="iconfloat2 "> <i class="iconfloat2 fab fa-linkedin iconcolor "></i></a>
       </div>
@@ -235,10 +235,10 @@
                         <div class="row center">
                            <div class="col s3 "><img src="assets/images/tombrand.png" alt="" class="img5"></div>
                            <div class="col s6  contactme">
-                              <a href="https://www.instagram.com/tomtom6288/" ><i class=" fab fa-instagram fa-2x  linkicon"></i></a>
-                              <a href="https://www.linkedin.com/in/thomas-maxey-776598207/"> <i class="fab fa-linkedin fa-2x  linkicon"></i></a> 
-                              <a href="https://github.com/Tmaxey201"> <i class="fab fa-github-square fa-2x  linkicon"></i></a> 
-                              <a href="mailto:tmaxey201@gmail.com"><i class="fab fa-envelope fa-2x  linkicon"></i></a> 
+                              <a href="https://www.instagram.com/tomtom6288/" ><i class=" fa fa-instagram fa-2x  linkicon"></i></a>
+                              <a href="https://www.linkedin.com/in/thomas-maxey-776598207/"> <i class="fa fa-linkedin fa-2x  linkicon"></i></a> 
+                              <a href="https://github.com/Tmaxey201"> <i class="fa fa-github-square fa-2x  linkicon"></i></a> 
+                              <a href="mailto:tmaxey201@gmail.com"><i class="fa fa-envelope fa-2x  linkicon"></i></a> 
                               <a href="mailto:tmaxey201@gmail.com" class="linkicon">Tmaxey201@gmail.com</a>
                               <div class="linkicon">1-252-670-0908</div>
                               <div class="linkicon"><a href="assets/files/Thomas Maxey Resume.pdf" class="white-text linkicon" download><span class="linkicon">My Resume</span></a></div>
