added local font awesome files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="assets/css/all.css">
       <link rel="stylesheet" href="assets/css/fontawesome.min.css">
       <link rel="stylesheet" href="assets/style.css">
       <link rel='shortcut icon' type='image/x-icon' href='assets/images/favicon.ico' />
@@ -26,6 +27,11 @@
          <a href="https://github.com/Tmaxey201" class="iconfloat1"> <i class=" iconfloat1 fab fa-github iconcolor  "></i></a>
          <a href="#" class="iconfloat2 "> <i class="iconfloat2 fab fa-linkedin iconcolor "></i></a>
       </div>
+
+      <li> <a class="fab fa-github fa-lg black-text iconspc" href="https://github.com/Tmaxey201"></a> <a
+         class="fas fa-envelope fa-lg white-text iconspc" href="mailto:tmaxey201@gmail.com"></a><span
+         class="iconspc">Thomas Maxey</span></li>
+
       <h1 class="col  endless" id="fade0">Develop</h1>
       <h1 class="col  endless1" id="fade1">Design</h1>
       <h1 class="col  endless2" id="fade2">Create</h1>
