--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="header" id="myHeader">
          <a href="#" class="namelogo ">Tom</a>
          <a href="#modal1" class="modal-trigger  float right  lang1 lang"><i class="material-icons dehaze iconcolor ">dehaze</i></a>
-         <a href="https://www.instagram.com/tomtom6288/" class="iconfloat"><i class=" iconfloat fab fa-instagram fa-sm iconcolor "></i></a>
+         <a href="https://www.instagram.com/tomtom6288/" class="iconfloat"><i class=" iconfloat fab fa-instagram  iconcolor "></i></a>
          <a href="https://github.com/Tmaxey201" class="iconfloat1"> <i class=" iconfloat1 fab fa-github iconcolor  "></i></a>
          <a href="#" class="iconfloat2 "> <i class="iconfloat2 fab fa-linkedin iconcolor "></i></a>
       </div>
